--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,13 @@
 
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Harry Potter inspired spell book made using React"
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fondamento&family=Noto+Nastaliq+Urdu&display=swap" rel="stylesheet"> 
 
     <title>Spell Book</title>
 
